--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@types/mapbox-gl": "^1.12.5",
+    "@types/ol": "^6.4.2",
+    "@types/proj4": "^2.5.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^1.12.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -38,6 +42,7 @@
     "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.0.4",
     "@angular/compiler-cli": "~10.0.5",
+    "@types/googlemaps": "^3.40.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
